<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/f_i1"
    tools:context=".NosotrosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="200dp"
            android:layout_height="110dp"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/im1_e" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/lblPretitulo"
            android:textColor="#83992F"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_margin="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/lbltexto1"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/lbltexto2"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_margin="5dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="20px">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_laptop_mac_24"/>
            <TextView
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:text="@string/lbltexto3"
                android:textStyle="bold"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="15px">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_email_24"/>
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/lbltexto4"
                android:textStyle="bold"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="40px">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="50dp"
                android:src="@drawable/facebook_32"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/instagram_32" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:src="@drawable/youtube_32" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            style="@style/TextAppearance.AppCompat.Medium" >

            <Button
                android:id="@+id/btnAtras"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_margin="70px"
                android:layout_weight="6"
                android:background="@drawable/mi_boton2"
                android:text="@string/btnAtras"
                android:textAllCaps="false"
                android:textSize="18sp"/>

        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/CopyRight2"
            android:layout_marginBottom="10px"
            android:gravity="bottom|center_horizontal"
            android:layout_gravity="bottom"
            android:textSize="13sp"
            style="@style/TextAppearance.AppCompat.Medium"  />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>