<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/f_i1"
    tools:context=".RecuperarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-37dp"
        tools:layout_editor_absoluteY="-50dp">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="282dp"
            android:layout_height="137dp"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/im1_e" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:text="@string/lblPretitulo"
            android:textColor="#83992F"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="-14dp"
            tools:layout_editor_absoluteY="173dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="0dp"
            android:gravity="center_horizontal"
            android:text="@string/lblRecuperala2"
            android:textColor="#071907"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="-14dp"
            tools:layout_editor_absoluteY="173dp" />


        <TextView
            android:id="@+id/lblMensajeCorro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            android:text="@string/lblMensajeRecuperala"
            android:textColor="#071907"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="-14dp"
            tools:layout_editor_absoluteY="173dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40px"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_email_24"></ImageView>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="700px"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0px"
                    android:inputType="textEmailAddress"
                    android:hint="@string/txtIngresaCorreo"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/btnEnviar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_margin="50px"
                android:layout_weight="6"

                android:background="@drawable/mi_boton"
                android:text="@string/btnEnviar"
                android:textAllCaps="false"
                android:textSize="15sp" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btnAtras"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_margin="50px"
                android:layout_weight="6"
                android:background="@drawable/mi_boton2"
                android:text="@string/btnAtras"
                android:textAllCaps="false"
                android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>