<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/f_i1"
    tools:context=".DetalleCita">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblDetalleCita"
            android:layout_margin="50dp"
            android:textSize="24sp"
            android:textColor="#1A237E"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblIDCita"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:layout_weight="3"
                android:textColor="#3F51B5"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/lblIDCita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:textColor="#424242"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblDoctor"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:layout_weight="3"
                android:textColor="#3F51B5"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/lblDoctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:textColor="#424242"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblPaciente"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:layout_weight="3"
                android:textColor="#3F51B5"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/lblPaciente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:textColor="#424242"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblFecha"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:layout_weight="3"
                android:textColor="#3F51B5"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/lblFechaSeleccionada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:textColor="#424242"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblHora"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:layout_weight="3"
                android:textColor="#3F51B5"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/lblHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:textColor="#424242"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblEstado"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:layout_weight="3"
                android:textColor="#3F51B5"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/lblEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:textColor="#424242"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="100dp"
            android:gravity="center"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/btnAnularCita"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_margin="50px"
                android:text="@string/btnAnularCita"
                android:textSize="15sp"
                android:textAllCaps="false"
                android:background="@drawable/mi_boton2"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>